kubestuff/postfix/postfix-sub.yml
apiVersion: v1
kind: Service
metadata:
  name: postfix-sub
spec:
  ports:
  - port: 587
  selector:
    app: postfix
  clusterIP: None
