kubestuff/postfix/postfix-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postfix
spec:
  ports:
  - port: 25
  selector:
    app: postfix
  clusterIP: None
